--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -9,8 +9,10 @@ runpod==1.3.3
 torch
 torchvision
 torchaudio
+pyannote-audio>=3.1.0
 git+https://github.com/huggingface/transformers
 accelerate
 optimum
 ipython-autotime
 flash-attn
+yt_dlp
