--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -10,7 +10,7 @@ torch
 torchvision
 torchaudio
 pyannote-audio>=3.1.0
-git+https://github.com/huggingface/transformers
+transformers
 accelerate
 optimum
 ipython-autotime
