--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -6,13 +6,10 @@
 # To learn more, see https://pip.pypa.io/en/stable/reference/requirements-file-format/
 
 runpod==1.3.3
-torch
-torchvision
-torchaudio
 pyannote-audio>=3.1.0
 transformers
 accelerate
 optimum
 ipython-autotime
-flash-attn
 yt_dlp
+insanely-fast-whisper
